src/objects/JBCXM__GSMetaInfo__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Category__c</fullName>
        <label>Category</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <label>DisplayOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <defaultValue>&quot;GLOBAL&quot;</defaultValue>
        <label>EntityType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>GSMetaInfo Relationship Type</relationshipLabel>
        <relationshipName>GSMetaInfoRelationshipType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SuccessPlanType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Success Plan Type</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>GSMetaInfo Success Plan Type</relationshipLabel>
        <relationshipName>GSMetaInfoSuccessPlanType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SystemName__c</fullName>
        <label>SystemName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>GS Meta Info</label>
    <nameField>
        <label>Meta Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS Meta Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>